update afrikaans wikis

--- a/home/wiki/App/Xtn/Mediawiki/Score.html
+++ b/home/wiki/App/Xtn/Mediawiki/Score.html
@@ -107,7 +107,7 @@
     </p>
     <ul>
       <li>
-        Go to <a href="http://xowa.org/home/wiki/Options/Score.html" id="xolnki_2" title="Options/Score" class="xowa-visited">Options/Score</a>.
+        Go to <a href="http://xowa.org/home/wiki/Options/Score.html" id="xolnki_2" title="Options/Score">Options/Score</a>.
       </li>
       <li>
         Configure the <b>lilypond</b> binary to whatever directory you chose above.
