--- a/home/wiki/Change_log.html
+++ b/home/wiki/Change_log.html
@@ -247,7 +247,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/French_wikis.html" id="xolnki_2" title="Wiki setup/French wikis" class="xowa-visited">Wiki_setup/French_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/French_wikis.html" id="xolnki_2" title="Wiki setup/French wikis">Wiki_setup/French_wikis</a>
       </dd>
     </dl>
     <ul>
@@ -257,7 +257,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Polish_wikis.html" id="xolnki_3" title="Wiki setup/Polish wikis" class="xowa-visited">Wiki_setup/Polish_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Polish_wikis.html" id="xolnki_3" title="Wiki setup/Polish wikis">Wiki_setup/Polish_wikis</a>
       </dd>
     </dl>
     <ul>
@@ -267,7 +267,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Swedish_wikis.html" id="xolnki_4" title="Wiki setup/Swedish wikis" class="xowa-visited">Wiki_setup/Swedish_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Swedish_wikis.html" id="xolnki_4" title="Wiki setup/Swedish wikis">Wiki_setup/Swedish_wikis</a>
       </dd>
     </dl>
     <ul>
@@ -277,7 +277,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Spanish_wikis.html" id="xolnki_5" title="Wiki setup/Spanish wikis" class="xowa-visited">Wiki_setup/Spanish_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Spanish_wikis.html" id="xolnki_5" title="Wiki setup/Spanish wikis">Wiki_setup/Spanish_wikis</a>
       </dd>
     </dl>
     <ul>
@@ -287,7 +287,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_6" title="Wiki setup/English wikis" class="xowa-visited">Wiki_setup/English_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_6" title="Wiki setup/English wikis">Wiki_setup/English_wikis</a>
       </dd>
     </dl>
     <h3>
@@ -303,7 +303,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_7" title="Special:XowaBookmarks" class="xowa-visited">Special:XowaBookmarks</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_7" title="Special:XowaBookmarks">Special:XowaBookmarks</a>
       </dd>
     </dl>
     <ul>
@@ -493,7 +493,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dev/Parser/Embeddable.html" id="xolnki_9" title="Dev/Parser/Embeddable" class="xowa-visited">Dev/Parser/Embeddable</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dev/Parser/Embeddable.html" id="xolnki_9" title="Dev/Parser/Embeddable">Dev/Parser/Embeddable</a>
       </dd>
     </dl>
     <ul>
@@ -503,7 +503,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Dev.html" id="xolnki_10" title="Options/Dev" class="xowa-visited">Options/Dev</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Dev.html" id="xolnki_10" title="Options/Dev">Options/Dev</a>
       </dd>
     </dl>
     <p>
@@ -575,7 +575,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_11" title="Dashboard/Image databases" class="xowa-visited">Dashboard/Image_databases</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_11" title="Dashboard/Image databases">Dashboard/Image_databases</a>
       </dd>
     </dl>
     <h2>
@@ -591,7 +591,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_12" title="Wiki setup/English wikis" class="xowa-visited">Wiki_setup/English_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_12" title="Wiki setup/English wikis">Wiki_setup/English_wikis</a>
       </dd>
     </dl>
     <ul>
@@ -601,7 +601,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_13" title="Wiki setup/German wikis">Wiki_setup/German_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_13" title="Wiki setup/German wikis" class="xowa-visited">Wiki_setup/German_wikis</a>
       </dd>
     </dl>
     <h3>
@@ -895,7 +895,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Include latest download central database.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_15" title="Wiki setup/English wikis" class="xowa-visited">Wiki_setup/English_wikis</a> <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_16" title="Wiki setup/German wikis">Wiki_setup/German_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_15" title="Wiki setup/English wikis">Wiki_setup/English_wikis</a> <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_16" title="Wiki setup/German wikis" class="xowa-visited">Wiki_setup/German_wikis</a>
       </dd>
     </dl>
     <h2>
@@ -911,7 +911,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_17" title="Wiki setup/English wikis" class="xowa-visited">Wiki_setup/English_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_17" title="Wiki setup/English wikis">Wiki_setup/English_wikis</a>
       </dd>
     </dl>
     <ul>
@@ -921,7 +921,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_18" title="Wiki setup/German wikis">Wiki_setup/German_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_18" title="Wiki setup/German wikis" class="xowa-visited">Wiki_setup/German_wikis</a>
       </dd>
     </dl>
     <h3>
@@ -1101,7 +1101,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_20" title="Options/Shortcuts" class="xowa-visited">Options/Shortcuts</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_20" title="Options/Shortcuts">Options/Shortcuts</a>
       </dd>
     </dl>
     <ul>
@@ -1728,7 +1728,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Databases/Overview.html" id="xolnki_29" title="App/Databases/Overview" class="xowa-visited">App/Databases/Overview</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Databases/Overview.html" id="xolnki_29" title="App/Databases/Overview">App/Databases/Overview</a>
       </dd>
     </dl>
     <h2>
@@ -1845,7 +1845,7 @@
         <span style='font-variant:small-caps'>Example</span>: xowa.api.addon.bldr.central.log_verbose = 'y';.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Config_script.html" id="xolnki_31" title="Options/Config script" class="xowa-visited">Options/Config_script</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Config_script.html" id="xolnki_31" title="Options/Config script">Options/Config_script</a>
       </dd>
     </dl>
     <ul>
