--- a/home/wiki/Change_log/2016.html
+++ b/home/wiki/Change_log/2016.html
@@ -329,7 +329,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Invalidate all Scribunto engines across all wikis when disabled.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_2" title="Options/Scribunto" class="xowa-visited">Options/Scribunto</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_2" title="Options/Scribunto">Options/Scribunto</a>
       </dd>
     </dl>
     <ul>
@@ -1295,7 +1295,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_9" title="Special:XowaDownloadCentral" class="xowa-visited">Special:XowaDownloadCentral</a> <a href="http://xowa.org/home/wiki/App/Import/Download_Central.html" id="xolnki_10" title="App/Import/Download Central" class="xowa-visited">App/Import/Download_Central</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_9" title="Special:XowaDownloadCentral" class="xowa-visited">Special:XowaDownloadCentral</a> <a href="http://xowa.org/home/wiki/App/Import/Download_Central.html" id="xolnki_10" title="App/Import/Download Central">App/Import/Download_Central</a>
       </dd>
     </dl>
     <ul>
@@ -1510,7 +1510,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Setup/Installation.html" id="xolnki_13" title="App/Setup/Installation" class="xowa-visited">App/Setup/Installation</a> <a href="http://xowa.org/home/wiki/App/Setup/Flash_card.html" id="xolnki_14" title="App/Setup/Flash card">App/Setup/Flash_card</a> <a href="http://xowa.org/home/wiki/App/Xtn/Browser/XOWA_viewer.html" id="xolnki_15" title="App/Xtn/Browser/XOWA viewer">App/Xtn/Browser/XOWA_viewer</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Setup/Installation.html" id="xolnki_13" title="App/Setup/Installation">App/Setup/Installation</a> <a href="http://xowa.org/home/wiki/App/Setup/Flash_card.html" id="xolnki_14" title="App/Setup/Flash card">App/Setup/Flash_card</a> <a href="http://xowa.org/home/wiki/App/Xtn/Browser/XOWA_viewer.html" id="xolnki_15" title="App/Xtn/Browser/XOWA viewer">App/Xtn/Browser/XOWA_viewer</a>
       </dd>
     </dl>
     <ul>
@@ -2155,7 +2155,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Search.html" id="xolnki_26" title="Options/Search" class="xowa-visited">Options/Search</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Search.html" id="xolnki_26" title="Options/Search">Options/Search</a>
       </dd>
     </dl>
     <ul>
