--- a/home/wiki/Change_log/v3.11.2.1.html
+++ b/home/wiki/Change_log/v3.11.2.1.html
@@ -30,7 +30,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/French_wikis.html" id="xolnki_2" title="Wiki setup/French wikis" class="xowa-visited">Wiki_setup/French_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/French_wikis.html" id="xolnki_2" title="Wiki setup/French wikis">Wiki_setup/French_wikis</a>
       </dd>
     </dl>
     <ul>
@@ -40,7 +40,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Polish_wikis.html" id="xolnki_3" title="Wiki setup/Polish wikis" class="xowa-visited">Wiki_setup/Polish_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Polish_wikis.html" id="xolnki_3" title="Wiki setup/Polish wikis">Wiki_setup/Polish_wikis</a>
       </dd>
     </dl>
     <ul>
@@ -50,7 +50,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Swedish_wikis.html" id="xolnki_4" title="Wiki setup/Swedish wikis" class="xowa-visited">Wiki_setup/Swedish_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Swedish_wikis.html" id="xolnki_4" title="Wiki setup/Swedish wikis">Wiki_setup/Swedish_wikis</a>
       </dd>
     </dl>
     <ul>
@@ -60,7 +60,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Spanish_wikis.html" id="xolnki_5" title="Wiki setup/Spanish wikis" class="xowa-visited">Wiki_setup/Spanish_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Spanish_wikis.html" id="xolnki_5" title="Wiki setup/Spanish wikis">Wiki_setup/Spanish_wikis</a>
       </dd>
     </dl>
     <ul>
@@ -70,7 +70,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_6" title="Wiki setup/English wikis" class="xowa-visited">Wiki_setup/English_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_6" title="Wiki setup/English wikis">Wiki_setup/English_wikis</a>
       </dd>
     </dl>
     <h3>
@@ -86,7 +86,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_7" title="Special:XowaBookmarks" class="xowa-visited">Special:XowaBookmarks</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_7" title="Special:XowaBookmarks">Special:XowaBookmarks</a>
       </dd>
     </dl>
     <ul>
@@ -276,7 +276,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dev/Parser/Embeddable.html" id="xolnki_9" title="Dev/Parser/Embeddable" class="xowa-visited">Dev/Parser/Embeddable</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dev/Parser/Embeddable.html" id="xolnki_9" title="Dev/Parser/Embeddable">Dev/Parser/Embeddable</a>
       </dd>
     </dl>
     <ul>
@@ -286,7 +286,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Dev.html" id="xolnki_10" title="Options/Dev" class="xowa-visited">Options/Dev</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Dev.html" id="xolnki_10" title="Options/Dev">Options/Dev</a>
       </dd>
     </dl>
     <p>
@@ -358,7 +358,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_11" title="Dashboard/Image databases" class="xowa-visited">Dashboard/Image_databases</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_11" title="Dashboard/Image databases">Dashboard/Image_databases</a>
       </dd>
     </dl>
   
