--- a/home/wiki/Dashboard/Import/Online.html
+++ b/home/wiki/Dashboard/Import/Online.html
@@ -21,7 +21,7 @@
       <b>Overview</b>: This is a list of <b>828</b> <sup id="cite_ref-update_date_0-0" class="reference"><a href="#cite_note-update_date-0">[1]</a></sup>data dumps compiled from <a href="http://dumps.wikimedia.org/backup-index.html" rel="nofollow" class="external free">http://dumps.wikimedia.org/backup-index.html</a> If you are looking for a specific wiki, please use the <a href="http://xowa.org/home/wiki/App/UI/Find_box.html" id="xolnki_2" title="App/UI/Find box">App/UI/Find box</a> or use the sortable columns.
     </p>
     <p>
-      <b>Internet access needed</b>: You will need internet access to use this page. If you don't have internet access but you've already downloaded a dump file, see <a href="http://xowa.org/home/wiki/App/Import/Offline.html" id="xolnki_3" title="App/Import/Offline" class="xowa-visited">App/Import/Offline</a>
+      <b>Internet access needed</b>: You will need internet access to use this page. If you don't have internet access but you've already downloaded a dump file, see <a href="http://xowa.org/home/wiki/App/Import/Offline.html" id="xolnki_3" title="App/Import/Offline">App/Import/Offline</a>
     </p>
     <p>
       <b>Large downloads</b>: Note that some of these wikis will have large dump files. For example, English Wikipedia is 11.0+ GB and will take 4 hours (from the United States). If your connection is interrupted, you may need to setup the wiki manually. See <a href="http://xowa.org/home/wiki/App/Import/Manual.html" id="xolnki_4" title="App/Import/Manual">App/Import/Manual</a>. You will also want to refer to this page if you want a dump that has talk pages or is from a specific month.
