--- a/home/wiki/Diagnostics.html
+++ b/home/wiki/Diagnostics.html
@@ -52,7 +52,7 @@
             <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Timeline.html" id="xolnki_10" title="Diagnostics/Javascript/Timeline">Diagnostics/Javascript/Timeline</a>
           </li>
           <li>
-            <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Graph.html" id="xolnki_11" title="Diagnostics/Javascript/Graph" class="xowa-visited">Diagnostics/Javascript/Graph</a>
+            <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Graph.html" id="xolnki_11" title="Diagnostics/Javascript/Graph">Diagnostics/Javascript/Graph</a>
           </li>
         </ul>
       </li>
