--- a/home/wiki/Help/Contents.html
+++ b/home/wiki/Help/Contents.html
@@ -38,10 +38,10 @@
         <td style='width:25%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Setup/System_requirements.html" id="xolnki_3" title="App/Setup/System requirements" class="xowa-visited">System requirements</a><br>
+              <a href="http://xowa.org/home/wiki/App/Setup/System_requirements.html" id="xolnki_3" title="App/Setup/System requirements">System requirements</a><br>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Setup/Installation.html" id="xolnki_4" title="App/Setup/Installation" class="xowa-visited">Installing</a>
+              <a href="http://xowa.org/home/wiki/App/Setup/Installation.html" id="xolnki_4" title="App/Setup/Installation">Installing</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Setup/Upgrading.html" id="xolnki_5" title="App/Setup/Upgrading">Upgrading</a>
@@ -54,13 +54,13 @@
         <td style='width:30%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Import/Import_overview.html" id="xolnki_6" title="App/Import/Import overview" class="xowa-visited">Import Overview</a><br>
+              <a href="http://xowa.org/home/wiki/App/Import/Import_overview.html" id="xolnki_6" title="App/Import/Import overview">Import Overview</a><br>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Import/Simple_Wikipedia.html" id="xolnki_7" title="App/Import/Simple Wikipedia" class="xowa-visited">Simple Wikipedia</a>
+              <a href="http://xowa.org/home/wiki/App/Import/Simple_Wikipedia.html" id="xolnki_7" title="App/Import/Simple Wikipedia">Simple Wikipedia</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_8" title="App/Import/English Wikipedia" class="xowa-visited">English Wikipedia</a>
+              <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_8" title="App/Import/English Wikipedia">English Wikipedia</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Import/Other_wikis.html" id="xolnki_9" title="App/Import/Other wikis">Other wikis</a>
@@ -178,7 +178,7 @@
         <td style='width:20%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/Dev/Command-line.html" id="xolnki_24" title="Dev/Command-line" class="xowa-visited">Overview</a>
+              <a href="http://xowa.org/home/wiki/Dev/Command-line.html" id="xolnki_24" title="Dev/Command-line">Overview</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps.html" id="xolnki_25" title="Dev/Command-line/Dumps" class="xowa-visited">Image dumps</a>
@@ -369,7 +369,7 @@
               <a href="http://xowa.org/home/wiki/App/Import/Removal.html" id="xolnki_58" title="App/Import/Removal">Removal</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Import/Offline.html" id="xolnki_59" title="App/Import/Offline" class="xowa-visited">Import/Using_data_dump_files</a>
+              <a href="http://xowa.org/home/wiki/App/Import/Offline.html" id="xolnki_59" title="App/Import/Offline">Import/Using_data_dump_files</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Import/Manual.html" id="xolnki_60" title="App/Import/Manual">Import/Manual</a>
