--- a/home/wiki/Help/Download_XOWA.html
+++ b/home/wiki/Help/Download_XOWA.html
@@ -101,7 +101,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/French_wikis.html" id="xolnki_4" title="Wiki setup/French wikis" class="xowa-visited">Wiki_setup/French_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/French_wikis.html" id="xolnki_4" title="Wiki setup/French wikis">Wiki_setup/French_wikis</a>
       </dd>
     </dl>
     <ul>
@@ -111,7 +111,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Polish_wikis.html" id="xolnki_5" title="Wiki setup/Polish wikis" class="xowa-visited">Wiki_setup/Polish_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Polish_wikis.html" id="xolnki_5" title="Wiki setup/Polish wikis">Wiki_setup/Polish_wikis</a>
       </dd>
     </dl>
     <ul>
@@ -121,7 +121,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Swedish_wikis.html" id="xolnki_6" title="Wiki setup/Swedish wikis" class="xowa-visited">Wiki_setup/Swedish_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Swedish_wikis.html" id="xolnki_6" title="Wiki setup/Swedish wikis">Wiki_setup/Swedish_wikis</a>
       </dd>
     </dl>
     <ul>
@@ -131,7 +131,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Spanish_wikis.html" id="xolnki_7" title="Wiki setup/Spanish wikis" class="xowa-visited">Wiki_setup/Spanish_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Spanish_wikis.html" id="xolnki_7" title="Wiki setup/Spanish wikis">Wiki_setup/Spanish_wikis</a>
       </dd>
     </dl>
     <ul>
@@ -141,7 +141,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_8" title="Wiki setup/English wikis" class="xowa-visited">Wiki_setup/English_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_8" title="Wiki setup/English wikis">Wiki_setup/English_wikis</a>
       </dd>
     </dl>
     <h3>
@@ -157,7 +157,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_9" title="Special:XowaBookmarks" class="xowa-visited">Special:XowaBookmarks</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_9" title="Special:XowaBookmarks">Special:XowaBookmarks</a>
       </dd>
     </dl>
     <ul>
@@ -347,7 +347,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dev/Parser/Embeddable.html" id="xolnki_11" title="Dev/Parser/Embeddable" class="xowa-visited">Dev/Parser/Embeddable</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dev/Parser/Embeddable.html" id="xolnki_11" title="Dev/Parser/Embeddable">Dev/Parser/Embeddable</a>
       </dd>
     </dl>
     <ul>
@@ -357,7 +357,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Dev.html" id="xolnki_12" title="Options/Dev" class="xowa-visited">Options/Dev</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Dev.html" id="xolnki_12" title="Options/Dev">Options/Dev</a>
       </dd>
     </dl>
     <p>
@@ -429,7 +429,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_13" title="Dashboard/Image databases" class="xowa-visited">Dashboard/Image_databases</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_13" title="Dashboard/Image databases">Dashboard/Image_databases</a>
       </dd>
     </dl>
   
