--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -108,7 +108,7 @@
       </li>
     </ul>
     <p>
-      For more details about this release, please see the <a href="http://xowa.org/home/wiki/Blog.html" id="xolnki_3" title="Blog">blog</a> and the <a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_4" title="Change log" class="xowa-visited">change log</a>.
+      For more details about this release, please see the <a href="http://xowa.org/home/wiki/Blog.html" id="xolnki_3" title="Blog">blog</a> and the <a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_4" title="Change log">change log</a>.
     </p>
     <p>
       For more details about the release schedule, please see <a href="http://xowa.org/home/wiki/Help/Release_schedule.html" id="xolnki_5" title="Help/Release schedule">the release schedule</a>.
@@ -157,7 +157,7 @@
         </dl>
       </dd>
       <dd>
-        Feel free to look around during the import process. You can start at <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_6" title="Help/Contents" class="xowa-visited">Help/Contents</a>. When the process completes, it will open Simple Wikipedia.
+        Feel free to look around during the import process. You can start at <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_6" title="Help/Contents">Help/Contents</a>. When the process completes, it will open Simple Wikipedia.
       </dd>
     </dl>
     <dl>
@@ -214,7 +214,7 @@
         Press Run
       </li>
       <li>
-        For more instructions, see <a href="http://xowa.org/home/wiki/App/Import/Download_Central.html" id="xolnki_14" title="App/Import/Download Central" class="xowa-visited">App/Import/Download_Central</a>
+        For more instructions, see <a href="http://xowa.org/home/wiki/App/Import/Download_Central.html" id="xolnki_14" title="App/Import/Download Central">App/Import/Download_Central</a>
       </li>
     </ul>
     <h5>
@@ -261,7 +261,7 @@
         v2.8.1 has a language converter dropdown for the Chinese wikis.
       </li>
       <li>
-        v2.7.3 introduces a new Bookmarks page. See <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_19" title="Special:XowaBookmarks" class="xowa-visited">Special:XowaBookmarks</a>
+        v2.7.3 introduces a new Bookmarks page. See <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_19" title="Special:XowaBookmarks">Special:XowaBookmarks</a>
       </li>
       <li>
         v2.6.5 uses SWT v4.5 and XULRunner v24. See <a href="http://xowa.org/home/wiki/Dev/SWT.html" id="xolnki_20" title="Dev/SWT">Dev/SWT</a> and <a href="http://xowa.org/home/wiki/App/UI/HTML_Browser.html" id="xolnki_21" title="App/UI/HTML Browser">HTML Browser</a>
@@ -303,7 +303,7 @@
             If the font size is too small, right-click and choose Font Increase
           </li>
           <li>
-            If you need more control over the font, customize it on the <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_26" title="Options/Window" class="xowa-visited">Options/Window</a> and <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_27" title="Options/HTML" class="xowa-visited">Options/HTML</a>
+            If you need more control over the font, customize it on the <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_26" title="Options/Window" class="xowa-visited">Options/Window</a> and <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_27" title="Options/HTML">Options/HTML</a>
           </li>
         </ul>
       </li>
@@ -383,7 +383,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_36" title="Dashboard/Image databases" class="xowa-visited">Image databases</a>
+          <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_36" title="Dashboard/Image databases">Image databases</a>
         </td>
         <td>
           Download image databases for your wiki
@@ -407,7 +407,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_39" title="Help/Contents" class="xowa-visited">Contents</a>
+          <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_39" title="Help/Contents">Contents</a>
         </td>
         <td>
           View all help topics
@@ -423,7 +423,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_41" title="Change log" class="xowa-visited">Change log</a>
+          <a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_41" title="Change log">Change log</a>
         </td>
         <td>
           View changes for each XOWA release
