--- a/home/wiki/Options.html
+++ b/home/wiki/Options.html
@@ -365,7 +365,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Scripting.html" id="xolnki_7" title="Options/Scripting" class="xowa-visited">Scripting</a>
+              <a href="http://xowa.org/home/wiki/Options/Scripting.html" id="xolnki_7" title="Options/Scripting">Scripting</a>
             </td>
             <td>
               Add scripts to customize the page
@@ -373,7 +373,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_8" title="Options/Shortcuts" class="xowa-visited">Shortcuts</a>
+              <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_8" title="Options/Shortcuts">Shortcuts</a>
             </td>
             <td>
               Keyboard shortcuts
@@ -381,7 +381,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_9" title="Options/Menus" class="xowa-visited">Menus</a>
+              <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_9" title="Options/Menus">Menus</a>
             </td>
             <td>
               Change the menu bar or right-click menu
@@ -434,7 +434,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Category.html" id="xolnki_15" title="Options/Category" class="xowa-visited">Category</a>
+              <a href="http://xowa.org/home/wiki/Options/Category.html" id="xolnki_15" title="Options/Category">Category</a>
             </td>
             <td>
               Category options
@@ -442,7 +442,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Import_Dansguardian.html" id="xolnki_16" title="Options/Import Dansguardian" class="xowa-visited">Import Dansguardian</a>
+              <a href="http://xowa.org/home/wiki/Options/Import_Dansguardian.html" id="xolnki_16" title="Options/Import Dansguardian">Import Dansguardian</a>
             </td>
             <td>
               Import using Dansguardian filters
@@ -455,7 +455,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_17" title="Options/HTML" class="xowa-visited">Appearance</a>
+              <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_17" title="Options/HTML">Appearance</a>
             </td>
             <td>
               HTML page font and custom CSS
@@ -463,7 +463,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Wiki_HTML.html" id="xolnki_18" title="Options/Wiki HTML" class="xowa-visited">Wiki</a>
+              <a href="http://xowa.org/home/wiki/Options/Wiki_HTML.html" id="xolnki_18" title="Options/Wiki HTML">Wiki</a>
             </td>
             <td>
               Miscellaneous wiki HTML options
@@ -471,7 +471,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/HTML_Tidy.html" id="xolnki_19" title="Options/HTML Tidy" class="xowa-visited">Tidy</a>
+              <a href="http://xowa.org/home/wiki/Options/HTML_Tidy.html" id="xolnki_19" title="Options/HTML Tidy">Tidy</a>
             </td>
             <td>
               HTML Tidy options
@@ -492,7 +492,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Firefox_addon.html" id="xolnki_21" title="Options/Firefox addon" class="xowa-visited">Firefox Add-on</a>
+              <a href="http://xowa.org/home/wiki/Options/Firefox_addon.html" id="xolnki_21" title="Options/Firefox addon">Firefox Add-on</a>
             </td>
             <td>
               Firefox Add-on: Run XOWA inside Firefox
@@ -500,7 +500,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/HTTP_server.html" id="xolnki_22" title="Options/HTTP server" class="xowa-visited">HTTP Server</a>
+              <a href="http://xowa.org/home/wiki/Options/HTTP_server.html" id="xolnki_22" title="Options/HTTP server">HTTP Server</a>
             </td>
             <td>
               HTTP Server: Run XOWA as an HTTP Server
@@ -513,7 +513,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_23" title="Options/Search suggest" class="xowa-visited">Search suggest</a>
+              <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_23" title="Options/Search suggest">Search suggest</a>
             </td>
             <td>
               Search suggest options (controls behavior in the search box)
@@ -521,7 +521,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Search.html" id="xolnki_24" title="Options/Search" class="xowa-visited">Search</a>
+              <a href="http://xowa.org/home/wiki/Options/Search.html" id="xolnki_24" title="Options/Search">Search</a>
             </td>
             <td>
               Search options (controls behavior for Special:Search)
@@ -529,7 +529,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_25" title="Options/Popups" class="xowa-visited">Popups</a>
+              <a href="http://xowa.org/home/wiki/Options/Popups.html" id="xolnki_25" title="Options/Popups">Popups</a>
             </td>
             <td>
               Popups that appear when hovering over a link
@@ -542,7 +542,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Math.html" id="xolnki_26" title="Options/Math" class="xowa-visited">Math</a>
+              <a href="http://xowa.org/home/wiki/Options/Math.html" id="xolnki_26" title="Options/Math">Math</a>
             </td>
             <td>
               Math options (text called in an {{#math}} statement)
@@ -550,7 +550,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_27" title="Options/Scribunto" class="xowa-visited">Scribunto</a>
+              <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_27" title="Options/Scribunto">Scribunto</a>
             </td>
             <td>
               Scribunto/Lua options (text called in an {{#invoke}} statement)
@@ -558,7 +558,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Score.html" id="xolnki_28" title="Options/Score" class="xowa-visited">Score</a>
+              <a href="http://xowa.org/home/wiki/Options/Score.html" id="xolnki_28" title="Options/Score">Score</a>
             </td>
             <td>
               Score options (text called in a &lt;score&gt; statement; used to render musical scores)
@@ -566,7 +566,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Wikibase.html" id="xolnki_29" title="Options/Wikibase" class="xowa-visited">Wikibase</a>
+              <a href="http://xowa.org/home/wiki/Options/Wikibase.html" id="xolnki_29" title="Options/Wikibase">Wikibase</a>
             </td>
             <td>
               Wikidata options
@@ -579,7 +579,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Dev.html" id="xolnki_30" title="Options/Dev" class="xowa-visited">Dev</a>
+              <a href="http://xowa.org/home/wiki/Options/Dev.html" id="xolnki_30" title="Options/Dev">Dev</a>
             </td>
             <td>
               Developer options
