--- a/home/wiki/Wiki_setup/Listing.html
+++ b/home/wiki/Wiki_setup/Listing.html
@@ -48,6 +48,9 @@
       <li>
         <a href="http://xowa.org/home/wiki/Wiki_setup/Haitian_wikis.html" id="xolnki_10" title="Wiki setup/Haitian wikis">Wiki setup/Haitian wikis</a>
       </li>
+      <li>
+        <a href="http://xowa.org/home/wiki/Wiki_setup/Afrikaans_wikis.html" id="xolnki_11" title="Wiki setup/Afrikaans wikis">Wiki setup/Afrikaans wikis</a>
+      </li>
     </ul>
   
     </div>
