--- a/home/wiki/Change_log/2013.html
+++ b/home/wiki/Change_log/2013.html
@@ -273,7 +273,7 @@
         (add) Html: page_id added to HTML output; EX:&lt;!-- page_id=~{page_id} --&gt;.
       </li>
       <li>
-        (doc) Score: Added note that ImageMagick is required for Score to work {detected by Anselm}. See: <a href="http://xowa.org/home/wiki/Options/Score.html" id="xolnki_2" title="Options/Score" class="xowa-visited">Options/Score</a>
+        (doc) Score: Added note that ImageMagick is required for Score to work {detected by Anselm}. See: <a href="http://xowa.org/home/wiki/Options/Score.html" id="xolnki_2" title="Options/Score">Options/Score</a>
       </li>
       <li>
         (dev) Tests: Xowa passes 2500 tests.
@@ -375,7 +375,7 @@
     </p>
     <ul>
       <li>
-        (add) File: English Wikipedia image database updated for 2013-12-02. See: <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_4" title="Dashboard/Image databases" class="xowa-visited">Dashboard/Image_databases</a>
+        (add) File: English Wikipedia image database updated for 2013-12-02. See: <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_4" title="Dashboard/Image databases">Dashboard/Image_databases</a>
       </li>
       <li>
         (change) Parser: English Wikipedia pages (2013-12-02) with {{Dead_link}} no longer fail. See: <a href="http://en.wikipedia.org/wiki/Wikia" rel="nofollow" class="external free">http://en.wikipedia.org/wiki/Wikia</a>
@@ -445,7 +445,7 @@
     </p>
     <ul>
       <li>
-        (add) Search: Added search suggest v2 for more accurate results {requested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_7" title="Options/Search suggest" class="xowa-visited">Options/Search_suggest</a>
+        (add) Search: Added search suggest v2 for more accurate results {requested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_7" title="Options/Search suggest">Options/Search_suggest</a>
       </li>
       <li>
         (add) Scribunto: Fixed "Citation needed" for 2013-12-04 English Wikipedia; EX:mw.isSubsting. See: <a href="http://en.wikipedia.org/wiki/Albedo" rel="nofollow" class="external free">http://en.wikipedia.org/wiki/Albedo</a>
@@ -553,7 +553,7 @@
         (change) Log: Added redlink logging statements.
       </li>
       <li>
-        (change) Options: Added <a href="http://xowa.org/home/wiki/Options/Config_script.html" id="xolnki_11" title="Options/Config script" class="xowa-visited">Options/Config_script</a>.
+        (change) Options: Added <a href="http://xowa.org/home/wiki/Options/Config_script.html" id="xolnki_11" title="Options/Config script">Options/Config_script</a>.
       </li>
       <li>
         (change) Scribunto: Gsub was not handling lua callback functions correctly; EX:[[Minnesota]] [[nice]] and regx of %[%[([^#|%]]-)%]%]. See: <a href="http://en.wiktionary.org/wiki/Minnesota_nice" rel="nofollow" class="external free">http://en.wiktionary.org/wiki/Minnesota_nice</a>
@@ -576,7 +576,7 @@
     </p>
     <ul>
       <li>
-        (add) Torrents for English Wikipedia images.. See <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_12" title="App/Import/English Wikipedia" class="xowa-visited">App/Import/English_Wikipedia</a> and <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_13" title="Dashboard/Image databases" class="xowa-visited">Dashboard/Image_databases</a>
+        (add) Torrents for English Wikipedia images.. See <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_12" title="App/Import/English Wikipedia">App/Import/English_Wikipedia</a> and <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_13" title="Dashboard/Image databases">Dashboard/Image_databases</a>
       </li>
       <li>
         (fix) [broken since:v0.4.4] Xnde: Incorrect parsing of xml attributes with embedded apostrophe / quote; EX:a = "b'c" -&gt; a = "bc". See: <a href="http://en.wikisource.org/wiki/Alice's_Adventures_in_Wonderland" rel="nofollow" class="external free">http://en.wikisource.org/wiki/Alice's_Adventures_in_Wonderland</a>
@@ -625,7 +625,7 @@
     </p>
     <ul>
       <li>
-        (add) Torrent: Added torrent: xowa_simplewiki_images_2013-10-30_complete; EX:/bin/torrent/wiki/simple.wikipedia.org/xowa_simplewiki_images_2013-10-30_complete.torrent. See: <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_14" title="Dashboard/Image databases" class="xowa-visited">Dashboard/Image_databases</a>
+        (add) Torrent: Added torrent: xowa_simplewiki_images_2013-10-30_complete; EX:/bin/torrent/wiki/simple.wikipedia.org/xowa_simplewiki_images_2013-10-30_complete.torrent. See: <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_14" title="Dashboard/Image databases">Dashboard/Image_databases</a>
       </li>
       <li>
         (fix) [broken since:v0.11.1] Html: Redlinks does not work when using "Back" / "Forward" {detected by Schnark; hidp123}.
@@ -800,7 +800,7 @@
         (done) Search: Search allows manually specifying additional namespaces.
       </li>
       <li>
-        (done) Search: Search allows default url arguments; EX:ns0=1&amp;ns14=1. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_16" title="Options/Search suggest" class="xowa-visited">Options/Search_suggest</a>
+        (done) Search: Search allows default url arguments; EX:ns0=1&amp;ns14=1. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_16" title="Options/Search suggest">Options/Search_suggest</a>
       </li>
       <li>
         (fix) [broken since:v0.7.3] Import: Import fails if data_storage_format is not .gz.
@@ -1099,7 +1099,7 @@
     </p>
     <ul>
       <li>
-        (add) Gui: Application menu bar now available. See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_21" title="Options/Menus" class="xowa-visited">Options/Menus</a>
+        (add) Gui: Application menu bar now available. See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_21" title="Options/Menus">Options/Menus</a>
       </li>
       <li>
         (add) Addon: Addon can automatically redirect http: to xowa: when offline {contributed by treck}.
@@ -1167,7 +1167,7 @@
         (add) Addon: Wikidata JSON formatter works for addon.
       </li>
       <li>
-        (add) Search: Search now has auto-wildcard option; EX:Earth -&gt; Earth* {requested by hidp123}. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_23" title="Options/Search suggest" class="xowa-visited">Options/Search_suggest</a>
+        (add) Search: Search now has auto-wildcard option; EX:Earth -&gt; Earth* {requested by hidp123}. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_23" title="Options/Search suggest">Options/Search_suggest</a>
       </li>
       <li>
         (add) Import: Option to not automatically delete xml file after import {requested by hidp123}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_24" title="Options/Import" class="xowa-visited">Options/Import</a>
@@ -1268,7 +1268,7 @@
         (add) Options: Reorganized options pages.
       </li>
       <li>
-        (add) Category: Hidden categories can now be separated from normal categories {requested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Category.html" id="xolnki_29" title="Options/Category" class="xowa-visited">Options/Category</a>
+        (add) Category: Hidden categories can now be separated from normal categories {requested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Category.html" id="xolnki_29" title="Options/Category">Options/Category</a>
       </li>
       <li>
         (add) Wikidata: Internationalization for Wikidata JSON formatter {contributed by Schnark}.
@@ -1688,7 +1688,7 @@
         (fix) Search: Search broken when not using search suggestions {detected by hidp123;anonymous7}.
       </li>
       <li>
-        (add) Search: Search now supports AllPages mode {requested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_38" title="Options/Search suggest" class="xowa-visited">Options/Search_suggest</a>
+        (add) Search: Search now supports AllPages mode {requested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_38" title="Options/Search suggest">Options/Search_suggest</a>
       </li>
       <li>
         (add) Import: Import/Script redesigned to be more intuitive {contributed by Schnark}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_39" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
@@ -1734,7 +1734,7 @@
     </p>
     <ul>
       <li>
-        (add) Search: Dynamic search suggestions; EX:Go to search box and start typing "e" "a" "r" "t" "h" {contributed by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_40" title="Options/Search suggest" class="xowa-visited">Options/Search_suggest</a>
+        (add) Search: Dynamic search suggestions; EX:Go to search box and start typing "e" "a" "r" "t" "h" {contributed by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_40" title="Options/Search suggest">Options/Search_suggest</a>
       </li>
       <li>
         (fix) Xtn/Lst: Lst handles recursive {{#lst}} calls; EX:http://it.wikisource.org {detected by Joe Webber}. See: <a href="http://it.wikisource.org" rel="nofollow" class="external free">http://it.wikisource.org</a>
@@ -2215,7 +2215,7 @@
     </p>
     <ul>
       <li>
-        (add) Missing talk/user namespace links can be configured to show red/hidden {requested by Schnark} See <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_54" title="Options/HTML" class="xowa-visited">Options/HTML</a>
+        (add) Missing talk/user namespace links can be configured to show red/hidden {requested by Schnark} See <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_54" title="Options/HTML">Options/HTML</a>
       </li>
       <li>
         (add) Visited pages now color-coded {assisted by Schnark}
@@ -2327,7 +2327,7 @@
     </p>
     <ul>
       <li>
-        (add) Preliminary support for Scribunto/Lua. See <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_57" title="Options/Scribunto" class="xowa-visited">Options/Scribunto</a>
+        (add) Preliminary support for Scribunto/Lua. See <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_57" title="Options/Scribunto">Options/Scribunto</a>
       </li>
       <li>
         (add) Improvements to Schnark's Javascript Timeline {contributed by Schnark}
